ui/v2.5/src/index.scss
@import "styles/theme";
@import "styles/range";
@import "styles/scrollbars";
@import "src/components/Changelog/styles.scss";
@import "src/components/Galleries/styles.scss";
@import "src/components/Help/styles.scss";
@import "src/components/Images/styles.scss";
@import "src/components/List/styles.scss";
@import "src/components/Movies/styles.scss";
@import "src/components/Performers/styles.scss";
@import "src/components/FrontPage/styles.scss";
@import "src/components/Scenes/styles.scss";
@import "src/components/SceneDuplicateChecker/styles.scss";
@import "src/components/SceneFilenameParser/styles.scss";
@import "src/components/ScenePlayer/styles.scss";
@import "src/components/Settings/styles.scss";
@import "src/components/Setup/styles.scss";
@import "src/components/Studios/styles.scss";
@import "src/components/Shared/styles.scss";
@import "src/components/Shared/Rating/styles.scss";
@import "src/components/Tags/styles.scss";
@import "src/components/Wall/styles.scss";
@import "src/components/Tagger/styles.scss";
@import "src/hooks/Lightbox/lightbox.scss";
@import "src/hooks/Interactive/interactive.scss";
@import "src/components/Dialogs/IdentifyDialog/styles.scss";
@import "src/components/Dialogs/styles.scss";
@import "flag-icons/css/flag-icons.min.css";

/* stylelint-disable */
#root {
  position: relative !important;
}
/* stylelint-enable */

html {
  font-size: 14px;
}

body {
  color: $text-color;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin: 0;
  overflow-x: hidden;
  padding: 3.5rem 0 0 0;

  @include media-breakpoint-down(xs) {
    @media (orientation: portrait) {
      padding: 1rem 0 5rem;
    }
  }
}

.main-content-container {
  padding-top: 15px;

  @media (max-width: 576px) {
    overflow-x: hidden;
  }
}

code,
.code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

dd {
  white-space: pre-line;
}

.sticky.detail-header-group {
  padding: 1rem 2.5rem;

  a.movie-name,
  a.performer-name,
  a.studio-name,
  a.tag-name {
    color: #f5f8fa;
    cursor: pointer;
    font-weight: 800;
  }

  a,
  span {
    color: #d7d9db;
    font-weight: 600;
    padding-right: 1.5rem;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.sticky.detail-header {
  animation: 1s fadeIn;
  display: block;
  min-height: 50px;
  padding: unset;
  position: fixed;
  top: 3.3rem;
  z-index: 10;

  @media (max-width: 576px) {
    display: none;
  }

  .movie-name,
  .performer-name,
  .studio-name,
  .tag-name {
    font-weight: 800;
  }
}

.detail-header {
  background-color: #192127;
  min-height: 15rem;
  padding: 1rem;
  transition: 0.3s;
  width: 100%;
  z-index: 11;

  .detail-group,
  .col {
    transition: 0.2s;
  }

  .details-edit div:nth-last-child(2) {
    flex: unset;
  }

  h2 {
    margin-bottom: 0;
  }

  .mr-2 {
    margin-left: 0.5rem;
  }

  .alias-head {
    color: #868791;
  }
}

.detail-expand-collapse {
  display: contents;

  button,
  .btn-primary:hover {
    background-color: unset;
    border: unset;
    color: #fff;
  }
}

.detail-header.edit {
  background-color: unset;

  .details-edit {
    padding-top: 1rem;
  }

  .detail-header-image {
    height: auto;
  }
}

.detail-header.collapsed {
  .detail-header-image img {
    max-width: 11rem;
    transition: 0.5s;
  }
}

.detail-body {
  width: 100%;

  @media (max-width: 576px) {
    padding-left: 15px;
    padding-right: 15px;
  }

  nav {
    align-content: center;
    align-items: center;
    border-bottom: solid 2px #192127;
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 5px 0;
  }
}

.detail-header-image {
  display: flex;
  float: left;
  height: 100%;
  justify-content: center;
  padding: 0 1rem;

  @media (max-width: 576px) {
    float: unset;
    height: auto;
    padding: 0;

    .movie-images .img {
      max-width: 100%;
    }
  }

  img {
    border-radius: 0.5rem;
    max-width: 14rem;
    object-fit: contain;
    transition: 0.5s;
  }

  .movie-images img {
    @media (max-width: 576px) {
      max-width: 100%;
    }
  }
}

.main.container-fluid {
  overflow-x: hidden;
}

#tag-page .detail-header-image img {
  max-width: 18rem;

  @media (max-width: 576px) {
    max-width: 100%;
  }
}

.detail-item.tags .pl-0 {
  margin-bottom: 0;
}

.detail-group {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 1rem 0;
}

.detail-item {
  align-items: left;
  display: inline-flex;
  flex-direction: column;
  padding-bottom: 0.5rem;
  padding-right: 4rem;
}

.detail-item-title {
  color: #868791;
  font-weight: 700;
}

.detail-item-value {
  align-items: center;
  display: flex;
  flex-direction: row;
}

.input-control,
.text-input {
  border: 0;
  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0),
    0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
    inset 0 1px 1px rgba(16, 22, 26, 0.4);
  color: $text-color;

  &:focus {
    border: 0;
    box-shadow: 0 0 0 1px $primary, 0 0 0 1px $primary,
      0 0 0 3px rgba(19, 124, 189, 0.3), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
      inset 0 1px 1px rgba(16, 22, 26, 0.4);
    color: $text-color;
  }
}

.input-control,
.input-control:focus,
.input-control:disabled {
  background-color: $secondary;
}

.input-control:disabled {
  opacity: 0.8;
}

.text-input,
.text-input:focus,
.text-input[readonly],
.text-input:disabled {
  background-color: $textfield-bg;
}

textarea.text-input {
  line-height: 2.5ex;
  min-height: 12ex;
  overflow-y: scroll;
}

.table-list {
  min-width: min-content;
}

.table-list a {
  color: $text-color;
}

.table-list table {
  width: inherit;
}

.table-list td,
.table-list th {
  border-left: 1px solid #414c53;
  font-size: 1rem;
  text-align: center;
  vertical-align: middle;

  h5,
  h6 {
    font-size: 1rem;
  }

  &:first-child {
    border-left: none;
  }
}
/* ... */

